--- a/scss/aging.scss
+++ b/scss/aging.scss
@@ -1,38 +1,52 @@
 #aging-section {
-  background: $c-ligh-brown;
-  padding: 73px 0 81px 0;
-  @media screen and (max-width: 1200px) {
-    padding: 70px 0;
-  }
-  .title {
-    color: $c-semi-dark-blue;
-    font-size: 50px;
-    letter-spacing: 1px;
+    background: #eee4da; //$c-ligh-brown;
+    padding: 73px 0 93px 0;
+
     @media screen and (max-width: 1200px) {
-      font-size: 42px;
+        padding: 70px 0;
     }
-    @media screen and (max-width: 980px) {
-      font-size: 38px;
+
+    @media screen and (max-width: 768px) {
+        padding: 40px 0;
     }
-    @media screen and (max-width: 600px) {
-      font-size: 30px;
+
+    .title {
+        color: $c-semi-dark-blue;
+        font-size: 50px;
+        font-weight: 400;
+        letter-spacing: 1px;
+
+        @media screen and (max-width: 1200px) {
+            font-size: 42px;
+        }
+
+        @media screen and (max-width: 980px) {
+            font-size: 38px;
+        }
+
+        @media screen and (max-width: 600px) {
+            font-size: 30px;
+        }
     }
-  }
-  p {
-    margin-top: 12px;
-    color: $c-dark-blue;
-    font-family: Proxima-Nova, sans-serif;
-    font-size: 25px;
-    padding-right: 10px;
-    line-height: 1.3em;
-    @media screen and (max-width: 1200px) {
-      font-size: 20px;
+
+    p {
+        margin-top: 12px;
+        color: $c-dark-blue;
+        font-family: Proxima-Nova, sans-serif;
+        font-size: 25px;
+        padding-right: 66px;
+        line-height: 1.3em;
+
+        @media screen and (max-width: 1200px) {
+            font-size: 20px;
+        }
+
+        @media screen and (max-width: 980px) {
+            font-size: 18px;
+        }
+
+        @media screen and (max-width: 600px) {
+            font-size: 16px;
+        }
     }
-    @media screen and (max-width: 980px) {
-      font-size: 18px;
-    }
-    @media screen and (max-width: 600px) {
-      font-size: 16px;
-    }
-  }
 }
