--- a/scss/how-to-slow.scss
+++ b/scss/how-to-slow.scss
@@ -1,52 +1,66 @@
 #how-to-slow-section {
-  background: url(../img/main-bg.png) no-repeat;
-  background-size: cover;
-  background-position: center;
-  padding: 100px 0px 0px 0px;
-  height: 620px;
-    @media screen and (max-width: 980px) {
-      height: calc(100vh - 120px);
-      padding: 0;
-      display: flex;
-      align-items:center;
-    }
-    @media screen and (max-width: 600px) {
-      height: calc(100vh - 90px);
-    }
-    @media screen and (max-width: 480px) {
-      height: calc(100vh - 70px);
-    }
-  .container {
-    max-width: 1600px;
-  }
-  .title {
-    color: $c-white;
-    font-size: 80px;
-    line-height: 1.1em;
-    letter-spacing: 1px;
-    font-weight: 500;
+    background: url(../img/main-bg.jpg) no-repeat;
+    background-size: cover;
+    background-position: 100%;
+    padding: 92px 0px 0px 0px;
+    height: calc(100vh - 188px);
 
-    @media screen and (max-width: 1200px) {
-      font-size: 72px;
-    }
     @media screen and (max-width: 980px) {
-      font-size: 62px;
+        height: calc(100vh - 120px);
+        padding: 0;
+        display: flex;
+        align-items: center;
     }
+
     @media screen and (max-width: 600px) {
-      font-size: 50px;
-      text-align: center;
+        height: calc(100vh - 90px);
     }
+
     @media screen and (max-width: 480px) {
-      font-size: 42px;
+        height: calc(100vh - 70px);
     }
-  }
-  p {
-       color: $c-white;
-       font-size: 20px;
-       width: 600px;
-     }
-     img{
-      max-width: 500px;
-      width:100%;
-     }
+
+    .container {
+        max-width: 1600px;
+    }
+
+    .title {
+        color: $c-white;
+        font-size: 80px;
+        line-height: 1.1em;
+        letter-spacing: 1px;
+        font-weight: 500;
+
+        @media screen and (max-width: 1200px) {
+            font-size: 72px;
+        }
+
+        @media screen and (max-width: 980px) {
+            font-size: 62px;
+        }
+
+        @media screen and (max-width: 600px) {
+            font-size: 50px;
+            text-align: center;
+        }
+
+        @media screen and (max-width: 480px) {
+            font-size: 42px;
+        }
+    }
+
+    p {
+        color: #d8e1f2;
+        font-size: 30px;
+        width: 780px;
+        margin-top: 10px;
+    }
+
+    img {
+      max-width: 677px;
+      width: 100%;
+      position: relative;
+      left: -150px;
+      margin-top: 74px;
+    }
 }
