--- a/scss/lazy.scss
+++ b/scss/lazy.scss
@@ -9,6 +9,7 @@
     @media screen and (max-width: 768px) {
         padding: 40px 0 60px;
     }
+
     .container {
         flex-wrap: wrap;
         display: flex;
@@ -157,6 +158,17 @@
             &.result {
                 img {
                     max-width: 330px;
+                    @media screen and (max-width: 1200px) {
+                        max-width: 300px;
+                    }
+
+                    @media screen and (max-width: 980px) {
+                        max-width: 270px;
+                    }
+
+                    @media screen and (max-width: 600px) {
+                        max-width: 230px;
+                    }
                 }
 
                 &>div {
@@ -190,6 +202,22 @@
             font-size: 24px;
             line-height: 1.5em;
             padding-right: 50px;
+
+            @media screen and (max-width: 1200px) {
+                font-size: 22px;
+            }
+
+            @media screen and (max-width: 980px) {
+                font-size: 20px;
+            }
+
+            @media screen and (max-width: 768px) {
+                font-size: 18px;
+            }
+
+            @media screen and (max-width: 600px) {
+                font-size: 16px;
+            }
         }
 
         .radio {
@@ -284,6 +312,10 @@
             align-items: center;
             margin-top: 52px;
 
+            @media screen and (max-width: 600px) {
+                flex-wrap: wrap;
+            }
+
             // flex-wrap: wrap; 
             &>div {
                 width: 100%;
@@ -294,6 +326,11 @@
                 margin-right: 34px;
                 position: relative;
                 top: 5px;
+
+                @media screen and (max-width: 600px) {
+                    margin: 0 auto 20px;
+                    max-width: 90px;
+                }
             }
 
             h3 {
@@ -302,6 +339,23 @@
                 color: $c-blue;
                 letter-spacing: 1.3px;
                 font-weight: 400;
+
+                @media screen and (max-width: 1200px) {
+                    font-size: 32px;
+                }
+
+                @media screen and (max-width: 980px) {
+                    font-size: 28px;
+                }
+
+                @media screen and (max-width: 768px) {
+                    font-size: 24px;
+                }
+
+                @media screen and (max-width: 600px) {
+                    font-size: 20px;
+                    text-align: center;
+                }
             }
 
             p {
@@ -312,6 +366,24 @@
                 margin-top: 6px;
                 letter-spacing: 0.6px;
                 width: 85%;
+
+                @media screen and (max-width: 1200px) {
+                    font-size: 22px;
+                }
+
+                @media screen and (max-width: 980px) {
+                    font-size: 20px;
+                }
+
+                @media screen and (max-width: 768px) {
+                    font-size: 18px;
+                }
+
+                @media screen and (max-width: 600px) {
+                    font-size: 16px;
+                    text-align: center;
+                    width: 100%;
+                }
             }
         }
     }
