--- a/scss/style.scss
+++ b/scss/style.scss
@@ -84,6 +84,7 @@ section {
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 1;
     &.on-top {
         opacity: 1;
         visibility: visible;
