--- a/scss/lazy.scss
+++ b/scss/lazy.scss
@@ -158,21 +158,36 @@
             &.result {
                 img {
                     max-width: 330px;
+
                     @media screen and (max-width: 1200px) {
                         max-width: 300px;
                     }
 
                     @media screen and (max-width: 980px) {
-                        max-width: 270px;
+                        max-width: 240px;
                     }
 
                     @media screen and (max-width: 600px) {
-                        max-width: 230px;
+                        max-width: 220px;
+                    }
+
+                    @media screen and (max-width: 480px) {
+                        max-width: 180px;
                     }
                 }
 
                 &>div {
                     width: 60%;
+
+                    @media screen and (max-width: 980px) {
+                        width: 55%;
+                    }
+
+                    @media screen and (max-width: 768px) {
+                        width: 100%;
+                        margin: 20px auto 0;
+                        text-align: center;
+                    }
                 }
             }
 
@@ -192,7 +207,8 @@
                 }
 
                 @media screen and (max-width: 480px) {
-                    width: 95%;
+                    width: 100%;
+                    padding: 0;
                 }
             }
         }
@@ -213,6 +229,7 @@
 
             @media screen and (max-width: 768px) {
                 font-size: 18px;
+                padding: 0;
             }
 
             @media screen and (max-width: 600px) {
