--- a/scss/free-radicals.scss
+++ b/scss/free-radicals.scss
@@ -47,6 +47,7 @@
                 width: 100%;
                 padding: 0 40px;
             }
+
             @media screen and (max-width: 600px) {
                 padding: 0 20px;
             }
@@ -84,10 +85,22 @@
             align-items: flex-start;
             letter-spacing: 0.7px;
 
+            @media screen and (max-width: 980px) {
+                font-size: 20px;
+            }
+
+            @media screen and (max-width: 768px) {
+                font-size: 18px;
+            }
+
             img {
                 width: 45px;
                 margin-right: 16px;
                 margin-top: -5px;
+
+                @media screen and (max-width: 980px) {
+                    width: 35px;
+                }
             }
 
             &+li {
