--- a/scss/how-to-slow.scss
+++ b/scss/how-to-slow.scss
@@ -5,15 +5,30 @@
     padding: 92px 0px 0px 0px;
     height: calc(100vh - 188px);
 
+    @media screen and (max-height: 890px) {
+        padding: 50px 0px 0px 0px;
+    }
+
+    @media screen and (max-height: 850px) {
+        padding: 30px 0px 0px 0px;
+    }
+
+
+    @media screen and (max-width: 1200px) {
+        background-position: 70%;
+    }
+
     @media screen and (max-width: 980px) {
         height: calc(100vh - 120px);
-        padding: 0;
+        padding: 30px 0;
         display: flex;
         align-items: center;
+        // background-position: 50%;
     }
 
     @media screen and (max-width: 600px) {
         height: calc(100vh - 90px);
+        padding: 20px 0;
     }
 
     @media screen and (max-width: 480px) {
@@ -22,6 +37,8 @@
 
     .container {
         max-width: 1600px;
+        position: relative;
+        height: 100%;
     }
 
     .title {
@@ -37,10 +54,15 @@
 
         @media screen and (max-width: 980px) {
             font-size: 62px;
+            line-height: 1em;
+        }
+
+        @media screen and (max-width: 768px) {
+            font-size: 54px;
         }
 
         @media screen and (max-width: 600px) {
-            font-size: 50px;
+            font-size: 48px;
             text-align: center;
         }
 
@@ -54,13 +76,36 @@
         font-size: 30px;
         width: 780px;
         margin-top: 10px;
+
+        @media screen and (max-width: 980px) {
+            font-size: 24px;
+            width: 100%;
+            text-align: center;
+            color: #d8e1f2;
+        }
     }
 
     img {
-      max-width: 677px;
-      width: 100%;
-      position: relative;
-      left: -150px;
-      margin-top: 74px;
+        max-width: 677px;
+        width: 100%;
+        position: absolute;
+        left: -112px;
+        margin-top: 74px;
+        bottom: 0;
+
+        @media screen and (max-height: 890px) {
+            max-width: 550px;
+            left: -90px;
+        }
+
+        @media screen and (max-height: 820px) {
+            max-width: 500px;
+            left: -70px;
+        }
+
+        @media screen and (max-height: 780px) {
+            max-width: 400px;
+            left: -50px;
+        }
     }
 }
