--- a/scss/how-to-slow.scss
+++ b/scss/how-to-slow.scss
@@ -82,6 +82,7 @@
             width: 100%;
             text-align: center;
             color: #d8e1f2;
+            margin-top: 20px;
         }
     }
 
