--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -125,7 +125,9 @@ footer {
     align-items: center;
     margin: 49px auto 82px;
     justify-content: center;
-
+    a {
+      color: #6697d3;
+    }
     &.active {
       .icon {
         transform: rotate(180deg);
